--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout</title>
     <link rel="stylesheet" href="style.css">
-    </link>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
 
@@ -59,7 +58,7 @@
             <h2 class="box-title">NAME</h2>
             <div class="input-group">
                 <label for="name-for-order" class="name-for-order label">Name for order</label>
-                <input id="name-for-order" class="name-for-order input" type="text" placeholder="Ford Perfect" />
+                <input id="name-for-order" class="name-for-order input" type="text" placeholder="Ford Perfect">
             </div>
         </div>
         <div class="payment">
@@ -67,12 +66,12 @@
                 <h2 class="box-title">PAYMENT</h2>
                 <div class="input-group">
                     <label for="card-number" class="card-number label">Card number</label>
-                    <input id="card-number" class="card-number input" type="number" placeholder="1234 5678 9012 3456" />
+                    <input id="card-number" class="card-number input" type="number" placeholder="1234 5678 9012 3456">
                 </div>
 
                 <div class="input-group half-width">
                     <label for="ccv-number" class="ccv-number label">CCV Number</label>
-                    <input type="number" class="ccv-number input" placeholder="001" maxlength="3" />
+                    <input id="ccv-number" type="number" class="ccv-number input" placeholder="001">
                 </div>
             </div>
         </div>
